fix bugs in card alignment
Test Plan: worsk

Differential Revision: https://projectweforgot.phacility.com/D193

--- a/website/src/static/styles.css
+++ b/website/src/static/styles.css
@@ -46,10 +46,6 @@
   height: 40px;
 }
 
-.timeline-image {
-  margin: auto;
-}
-
 .timeline-star-filter {
   margin: 0px 5px;
 }
